Added style change for excluded words in the filter

--- a/gui/src/main/resources/main.css
+++ b/gui/src/main/resources/main.css
@@ -45,6 +45,10 @@
 .wordList .list-cell:unknown, .wordList .table-cell:unknown {
     -fx-background-color: -gradient-unknown;
 }
+.wordList .table-cell:excluded .text {
+    -fx-strikethrough: true;
+    -fx-fill: red;
+}
 .filterSessionStateColumn {
     -fx-alignment: CENTER;
 }
