--- a/gui/src/main/resources/filter-session.fxml
+++ b/gui/src/main/resources/filter-session.fxml
@@ -38,7 +38,7 @@
                   <Button disable="true" mnemonicParsing="false" text="Change file..." />
                </children>
             </HBox>
-            <TableView fx:id="tableWords" prefHeight="300.0" prefWidth="600.0" VBox.vgrow="ALWAYS" editable="false" styleClass="wordList">
+            <TableView fx:id="tableWords" editable="false" prefHeight="300.0" prefWidth="600.0" styleClass="wordList" VBox.vgrow="ALWAYS">
                 <placeholder>
                     <Label text="Word list coming soon.  Watch this space..." />
                 </placeholder>
@@ -46,26 +46,31 @@
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
                <columns>
-                  <TableColumn fx:id="columnType" maxWidth="150.0" minWidth="150.0" text="Known / Unknown" styleClass="filterSessionStateColumn" />
-                  <TableColumn fx:id="columnWord" text="Word" styleClass="filterSessionWordColumn" />
+                  <TableColumn fx:id="columnType" maxWidth="150.0" minWidth="150.0" styleClass="filterSessionStateColumn" text="Known / Unknown" />
+                  <TableColumn fx:id="columnWord" styleClass="filterSessionWordColumn" text="Word" />
                </columns>
             </TableView>
-             <RadioButton fx:id="buttonKnown" mnemonicParsing="false" selected="true" text="Known words">
-                 <graphic>
-                     <HBox styleClass="iconBox">
-                         <FontAwesomeIconView styleClass="filterKnownIconSmall" />
-                     </HBox>
-                 </graphic>
-             </RadioButton>
-             <RadioButton fx:id="buttonSeen" mnemonicParsing="false" text="Known &amp; unknown words">
-                 <graphic>
-                     <HBox styleClass="iconBox">
-                         <FontAwesomeIconView styleClass="filterKnownIconSmall" />
-                         <FontAwesomeIconView styleClass="filterUnknownIconSmall" />
-                     </HBox>
-                 </graphic>
-             </RadioButton>
-            <Label fx:id="labelTotalWords" text="Total words: 1,234" />
+            <VBox styleClass="filterInclusionBox">
+               <children>
+                  <Label text="Select the words to filter:" />
+                   <RadioButton fx:id="buttonKnown" mnemonicParsing="false" selected="true" text="Known words">
+                       <graphic>
+                           <HBox styleClass="iconBoxSmall">
+                               <FontAwesomeIconView styleClass="filterKnownIconSmall" />
+                           </HBox>
+                       </graphic>
+                   </RadioButton>
+                   <RadioButton fx:id="buttonSeen" mnemonicParsing="false" text="Known &amp; unknown words">
+                       <graphic>
+                           <HBox styleClass="iconBoxSmall">
+                               <FontAwesomeIconView styleClass="filterKnownIconSmall" />
+                               <FontAwesomeIconView styleClass="filterUnknownIconSmall" />
+                           </HBox>
+                       </graphic>
+                   </RadioButton>
+                  <Label fx:id="labelTotalWords" text="Total words: 1,234" />
+               </children>
+            </VBox>
          </children>
       </VBox>
    </center>
