--- a/gui/src/main/resources/settings.fxml
+++ b/gui/src/main/resources/settings.fxml
@@ -4,15 +4,18 @@
   ~ Open Source Software published under the Apache Licence, Version 2.0.
   -->
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
@@ -54,6 +57,7 @@
               <columnConstraints>
                 <ColumnConstraints />
                 <ColumnConstraints />
+                <ColumnConstraints />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints />
@@ -61,10 +65,62 @@
               </rowConstraints>
                <children>
                   <Label styleClass="fieldLabel" text="Word lists to exclude:" GridPane.hgrow="ALWAYS" />
-                  <Button fx:id="buttonAddList" mnemonicParsing="false" text="Add Excluded Word List" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
-                  <ListView fx:id="listExcludedFiles" prefHeight="150.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                   <Button fx:id="buttonAddFile" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.halignment="RIGHT" disable="true">
+                       <graphic>
+                        <HBox alignment="CENTER" spacing="2.0">
+                           <children>
+                                 <FontAwesomeIconView styleClass="buttonFilterFileIcon" />
+                              <FontAwesomeIconView styleClass="buttonAddIcon" />
+                           </children>
+                        </HBox>
+                       </graphic>
+                       <tooltip>
+                           <Tooltip text="Add a text file containing a list of words to exclude" />
+                       </tooltip>
+                   </Button>
+                   <Button fx:id="buttonAddList" mnemonicParsing="false" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
+                     <graphic>
+                        <HBox alignment="CENTER" spacing="2.0">
+                           <children>
+                              <FontAwesomeIconView styleClass="buttonFilterSessionIcon" />
+                              <FontAwesomeIconView styleClass="buttonAddIcon" />
+                           </children>
+                        </HBox>
+                     </graphic>
+                       <tooltip>
+                           <Tooltip text="Add a VocabHunter file with words to exclude" />
+                       </tooltip>
+                   </Button>
+                  <ListView fx:id="listExcludedFiles" prefHeight="150.0" prefWidth="600.0" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                       <placeholder>
-                          <Label text="No lists of excluded words" />
+                          <GridPane alignment="CENTER" hgap="5" vgap="10">
+                              <columnConstraints>
+                                  <ColumnConstraints />
+                                  <ColumnConstraints />
+                              </columnConstraints>
+                              <rowConstraints>
+                                  <RowConstraints />
+                                  <RowConstraints />
+                                  <RowConstraints />
+                              </rowConstraints>
+                              <children>
+                                  <Label text="Use the buttons above to add lists of words to exclude:" GridPane.columnSpan="2" />
+                                  <HBox alignment="CENTER" spacing="2.0" GridPane.rowIndex="1">
+                                      <children>
+                                          <FontAwesomeIconView styleClass="buttonFilterFileIcon" />
+                                          <FontAwesomeIconView styleClass="buttonAddIcon" />
+                                      </children>
+                                  </HBox>
+                                  <Label text="Add a text file containing a list of words to exclude" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+                                  <HBox alignment="CENTER" spacing="2.0" GridPane.rowIndex="2">
+                                      <children>
+                                          <FontAwesomeIconView styleClass="buttonFilterSessionIcon" />
+                                          <FontAwesomeIconView styleClass="buttonAddIcon" />
+                                      </children>
+                                  </HBox>
+                                  <Label text="Add a VocabHunter file with words to exclude" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+                              </children>
+                          </GridPane>
                       </placeholder>
                   </ListView>
                </children>
