Fixed the placeholder for the table in the filter file dialogue

--- a/gui/src/main/resources/main.css
+++ b/gui/src/main/resources/main.css
@@ -49,6 +49,10 @@
     -fx-strikethrough: true;
     -fx-fill: red;
 }
+.wordList .error {
+    -fx-text-fill: red;
+    -fx-font-size: 18;
+}
 .filterSessionStateColumn {
     -fx-alignment: CENTER;
 }
