--- a/gui/src/main/resources/settings.fxml
+++ b/gui/src/main/resources/settings.fxml
@@ -65,7 +65,7 @@
               </rowConstraints>
                <children>
                   <Label styleClass="fieldLabel" text="Word lists to exclude:" GridPane.hgrow="ALWAYS" />
-                   <Button fx:id="buttonAddFile" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.halignment="RIGHT" disable="true">
+                   <Button fx:id="buttonAddGridFile" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.halignment="RIGHT" disable="true">
                        <graphic>
                         <HBox alignment="CENTER" spacing="2.0">
                            <children>
@@ -75,10 +75,10 @@
                         </HBox>
                        </graphic>
                        <tooltip>
-                           <Tooltip text="Add a text file containing a list of words to exclude" />
+                           <Tooltip text="Add a text document or spreadsheet with words to exclude" />
                        </tooltip>
                    </Button>
-                   <Button fx:id="buttonAddList" mnemonicParsing="false" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
+                   <Button fx:id="buttonAddSessionFile" mnemonicParsing="false" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
                      <graphic>
                         <HBox alignment="CENTER" spacing="2.0">
                            <children>
@@ -88,7 +88,7 @@
                         </HBox>
                      </graphic>
                        <tooltip>
-                           <Tooltip text="Add a VocabHunter file with words to exclude" />
+                           <Tooltip text="Add a VocabHunter session file with words to exclude" />
                        </tooltip>
                    </Button>
                   <ListView fx:id="listExcludedFiles" prefHeight="150.0" prefWidth="600.0" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
@@ -111,14 +111,14 @@
                                           <FontAwesomeIconView styleClass="buttonAddIcon" />
                                       </children>
                                   </HBox>
-                                  <Label text="Add a text file containing a list of words to exclude" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+                                  <Label text="Add a text document or spreadsheet with words to exclude" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
                                   <HBox alignment="CENTER" spacing="2.0" GridPane.rowIndex="2">
                                       <children>
                                           <FontAwesomeIconView styleClass="buttonFilterSessionIcon" />
                                           <FontAwesomeIconView styleClass="buttonAddIcon" />
                                       </children>
                                   </HBox>
-                                  <Label text="Add a VocabHunter file with words to exclude" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+                                  <Label text="Add a VocabHunter session file with words to exclude" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
                               </children>
                           </GridPane>
                       </placeholder>
