--- a/gui/src/main/resources/main.css
+++ b/gui/src/main/resources/main.css
@@ -1,10 +1,16 @@
 * {
    -colour-unseen: #F5F9FF;
+   -colour-unseen-dark1: derive(-colour-unseen, -20%);
+   -colour-unseen-dark2: derive(-colour-unseen, -40%);
    -colour-known: #EBFFF0;
    -colour-known-end: #008000;
+   -colour-known-dark1: derive(-colour-known, -20%);
+   -colour-known-dark2: derive(-colour-known, -40%);
    -gradient-known: linear-gradient(from 0% 0% to 100% 200%, repeat, -colour-known 0%, -colour-known-end 90%);
    -colour-unknown: #FFF0ED;
    -colour-unknown-end: #a43030;
+   -colour-unknown-dark1: derive(-colour-unknown, -20%);
+   -colour-unknown-dark2: derive(-colour-unknown, -40%);
    -gradient-unknown: linear-gradient(from 0% 0% to 100% 200%, repeat, -colour-unknown 0%, -colour-unknown-end 90%);
    -colour-word-use: darkblue;
    -colour-filtered: lightgrey;
@@ -18,6 +24,10 @@
 .mainWord {
     -fx-font-size: 40;
 }
+.useCount {
+    -fx-font-size: 13;
+    -fx-padding: 0 0 10 0;
+}
 .mainWordPane { /* This corresponds to the pseudo-class "unseen" */
     -fx-background-color: -colour-unseen;
 }
@@ -25,6 +35,30 @@
     -fx-background-color: -colour-known;
 }
 .mainWordPane:unknown {
+    -fx-background-color: -colour-unknown;
+}
+.padTopWord {
+    -fx-pref-height: 100;
+}
+.textAreaWordNote {
+    -fx-padding: 10;
+    -fx-background-insets: 10;
+    -fx-pref-height: 100;
+    -fx-background-color: -colour-unseen-dark1; /* This corresponds to the pseudo-class "unseen" */
+}
+.mainWordPane:known .textAreaWordNote {
+    -fx-background-color: -colour-known-dark1;
+}
+.mainWordPane:unknown .textAreaWordNote {
+    -fx-background-color: -colour-unknown-dark1;
+}
+.textAreaWordNote .content { /* This corresponds to the pseudo-class "unseen" */
+    -fx-background-color: -colour-unseen;
+}
+.mainWordPane:known .textAreaWordNote .content {
+    -fx-background-color: -colour-known;
+}
+.mainWordPane:unknown .textAreaWordNote .content {
     -fx-background-color: -colour-unknown;
 }
 .wordList .list-cell:selected {
@@ -130,7 +164,18 @@
     -glyph-size: 40;
     -glyph-name: REFRESH;
 }
-.buttonUnseen, .buttonSearchClose, .buttonSearchUp, .buttonSearchDown {
+.buttonNoteIcon {
+    -glyph-size: 40;
+    -glyph-name: COMMENT_ALT;
+    -fx-fill: -colour-unseen-dark2;  /* This corresponds to the pseudo-class "unseen" */
+}
+.mainWordPane:known .buttonNoteIcon {
+    -fx-fill: -colour-known-dark2;
+}
+.mainWordPane:unknown .buttonNoteIcon {
+    -fx-fill: -colour-unknown-dark2;
+}
+.buttonUnseen, .buttonNote, .buttonSearchClose, .buttonSearchUp, .buttonSearchDown {
     -fx-background-color: transparent;
     -fx-background-insets: 0;
 }
